# rust-matmul

./: Cargo.toml  README.md
.github/workflows/: rust-clippy.yml
benches/: base_case.rs  branch_prediction.rs  non_square.rs  simd_kinds.rs  small_matrices.rs
src/: main.rs
