[package]
name = "rust-matmul"
version = "0.1.0"
authors = ["Jose Luis <artirj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.13.0", features = ["blas"] }
blas-src = { version = "0.2.1", default-features = false, features = ["accelerate"] }
matrixmultiply = "0.2.3"
nalgebra = "0.20.0"
#openblas-src = { version = "0.6", default-features = false, features = ["cblas", "system"] }
[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "base_case"
harness = false
