[package]
name = "rust-matmul"
version = "0.1.0"
authors = ["Jose Luis <artirj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.13", features = ["blas"] }
blas-src = { version = "0.2", default-features = false, features = ["openblas"] }
matrixmultiply = "0.2"
nalgebra = "0.21"
typenum = "1.11"
tch = "0.1.6"
openblas-src = { version = "0.6", default-features = false, features = ["cblas"] }
rayon = "1.3.0"
[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "base_case"
harness = false
[[bench]]
name = "non_square"
harness = false
[[bench]]
name="branch_prediction"
harness=false
[[bench]]
name="simd_kinds"
harness=false
